# supersonic

./: .env  .gitignore  Cargo.toml  LICENSE  README.md
cli/: Cargo.toml
frontend/: README.md  package.json  tailwind.config.js
frontend/src/pages/: config.tsx  index.tsx
frontend/src/pages/api/: config.ts
frontend/src/styles/: globals.css
migrations/2022-06-04-182346_create_posts/: up.sql
src/: main.rs  models.rs  schema.rs
