[package]
name = "supersonic"
version = "0.1.0"
edition = "2021"
authors = ["Rithul Kamesh <captain@hackplane.io>"]

[dependencies]
rocket = "0.5.0-rc.2"
lettre = "0.10.0-rc.6"
diesel = { version = "1.4.8", features = ["mysql"] }
async-std = { version = "1", features = [ "attributes" ] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"